--- a/blog/app/templates/base.html
+++ b/blog/app/templates/base.html
@@ -15,7 +15,13 @@
       rel="stylesheet"
     />
 
-    <title>Stand CSS Blog by TemplateMo</title>
+    <title>
+      {% if title %}
+      {{title}} - Bruh Blog by Grace.
+      {% else %}
+      Bruh Blog by Grace.
+      {% endif %}
+    </title>
 
     <!-- Bootstrap core CSS -->
     <link
@@ -61,7 +67,7 @@ https://templatemo.com/tm-551-stand-blog
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"
+          <a class="navbar-brand" href="{{ url_for('home.index') }}"
             ><h2>Bruh Blog<em>.</em></h2></a
           >
           <button
@@ -94,9 +100,21 @@ https://templatemo.com/tm-551-stand-blog
               </li>
 
               <!-- login logic coming soon -->
-              <li class="nav-item main-button">
-                <a href="contact.html">Login</a>
-              </li>
+              {% if current_user.is_authenticated %}
+                <li class="nav-item {{ 'active' if request.path == url_for('auth.profile') }}">
+                  <a class="nav-link" href="{{ url_for('auth.profile') }}">{{ current_user.username }}</a>
+                </li>
+                <li class="nav-item main-button">
+                  <a href="{{ url_for('auth.logout') }}">Logout</a>
+                </li>
+              {% else %}
+                <li class="nav-item main-button">
+                  <a href="{{ url_for('auth.login') }}">Login</a>
+                </li>
+                <li class="nav-item main-button">
+                  <a href="{{ url_for('auth.register') }}">Register</a>
+                </li>
+              {% endif%}
             </ul>
           </div>
         </div>
@@ -104,6 +122,15 @@ https://templatemo.com/tm-551-stand-blog
     </header>
 
     <!-- Page Content -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages%}
+          <div class="alert alert-{{ category }}">
+            {{message}}
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
     {% block content %}
     <div style="height: 100vh;"></div>
     {% endblock %}
@@ -123,7 +150,7 @@ https://templatemo.com/tm-551-stand-blog
           <div class="col-lg-12">
             <div class="copyright-text">
               <p>
-                Copyright 2020 Stand Blog Co. | Design:
+                Copyright <span id="year">2020</span> Stand Blog Co. | Design:
                 <a rel="nofollow" href="https://templatemo.com" target="_parent"
                   >TemplateMo</a
                 >
@@ -155,6 +182,12 @@ https://templatemo.com/tm-551-stand-blog
           t.value = ""; // with more chance of typos
           t.style.color = "#fff";
         }
+      }
+    </script>
+    <script>
+      const year = document.querySelector('#year');
+      if (year) {
+          year.innerHTML = new Date().getFullYear().toString();
       }
     </script>
   </body>
