--- a/blog/app/templates/register.html
+++ b/blog/app/templates/register.html
@@ -3,7 +3,7 @@
     <section class="register-form">
         <div class="container">
             <div class="row d-flex justify-content-center">
-                <div class="col-6">
+                <div class="col-lg-6 col-sm-12">
                     <div class="card p-4 mt-4">
                         <form method="POST" action="">
                             {{ form.hidden_tag() }} {# CSRF Token #}
