--- a/blog/app/templates/base.html
+++ b/blog/app/templates/base.html
@@ -9,6 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="TemplateMo" />
 
+    <link rel="shortcut icon" href="{{ url_for('static', filename='/favicon.ico') }}">
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"
       rel="stylesheet"
