--- a/blog/app/templates/profile.html
+++ b/blog/app/templates/profile.html
@@ -1,4 +1,46 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>{{title}}</h1>
+<!-- profile template by https://bbbootstrap.com/users/edgar-burongoh-33849 -->
+<div class="container rounded bg-white mt-5 mb-5">
+    <div class="row justify-content-center">
+        <div class="col-md-3 border-end">
+            <div class="d-flex flex-column align-items-center text-center p-3 py-5">
+                <div class="position-relative">
+                    <div class="btn profile-button position-absolute bottom-0 end-0" type="button">
+                        <span class="fa-stack fa-lg">
+                            <i class="fa fa-circle fa-stack-2x" style="color: #f48840;"></i>
+                            <i class="fa fa-edit fa-stack-1x fa-inverse"></i>
+                          </span> 
+                        </div>
+                    <img class="rounded-circle mt-5" width="150px" src="{{ current_user.avatar }}">
+                </div>
+                <h3 class="mt-2">{{ current_user.username }}</h3>
+                <p class="mt-1">{{ current_user.email }}</p>
+                <span> </span>
+            </div>
+        </div>
+        <div class="col-md-5 border-end">
+            <div class="p-3 py-5">
+                <div class="d-flex justify-content-between align-items-center mb-3">
+                    <h4 class="text-right">Profile Settings</h4>
+                </div>
+                <div class="row mt-2">
+                    <div class="col-md-12"><label class="labels">Name</label><input type="text" class="form-control" placeholder="first name" value=""></div>
+                    <div class="col-md-12 mt-2"><label class="labels">Mobile Number</label><input type="text" class="form-control" placeholder="enter phone number" value=""></div>
+                    <div class="col-md-12 mt-2"><label class="labels">Address Line 1</label><input type="text" class="form-control" placeholder="enter address line 1" value=""></div>
+                    <div class="col-md-12 mt-2"><label class="labels">Address Line 2</label><input type="text" class="form-control" placeholder="enter address line 2" value=""></div>
+                    <div class="col-md-12 mt-2"><label class="labels">Postcode</label><input type="text" class="form-control" placeholder="enter address line 2" value=""></div>
+                    <div class="col-md-12 mt-2"><label class="labels">State</label><input type="text" class="form-control" placeholder="enter address line 2" value=""></div>
+                    <div class="col-md-12 mt-2"><label class="labels">Area</label><input type="text" class="form-control" placeholder="enter address line 2" value=""></div>
+                    <div class="col-md-12 mt-2"><label class="labels">Email ID</label><input type="text" class="form-control" placeholder="enter email id" value=""></div>
+                    <div class="col-md-12 mt-2"><label class="labels">Education</label><input type="text" class="form-control" placeholder="education" value=""></div>
+                </div>
+                <div class="mt-5 text-center">
+                    <input class="main-button w-100" id="submit" name="submit" type="submit" value="Save Profile">
+                </div>
+            </div>
+        </div>
+</div>
+</div>
+</div>
 {% endblock %}
