--- a/blog/app/templates/base.html
+++ b/blog/app/templates/base.html
@@ -24,11 +24,17 @@
     </title>
 
     <!-- Bootstrap core CSS -->
-    <link
+    <!-- <link
       href="{{url_for('static', filename='css/bootstrap.min.css')}}"
       rel="stylesheet"
-    />
+    /> -->
 
+    <!-- Bootstrap CSS -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+    
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
     <!-- Additional CSS Files -->
     <link
       rel="stylesheet"
@@ -53,7 +59,7 @@ https://templatemo.com/tm-551-stand-blog
 -->
   </head>
 
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <!-- ***** Preloader Start ***** -->
     <div id="preloader">
       <div class="jumper">
@@ -62,35 +68,30 @@ https://templatemo.com/tm-551-stand-blog
         <div></div>
       </div>
     </div>
+
+    <div class="loading">
+      <div class="dot"></div>
+      <div class="dot"></div>
+      <div class="dot"></div>
+      <div class="dot"></div>
+      <div class="dot"></div>
+    </div>
     <!-- ***** Preloader End ***** -->
 
     <!-- Header -->
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="{{ url_for('home.index') }}"
-            ><h2>Bruh Blog<em>.</em></h2></a
-          >
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarResponsive"
-            aria-controls="navbarResponsive"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <a class="navbar-brand" href="{{ url_for('home.index') }}">
+            <h2>Bruh Blog<em>.</em></h2>
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-              <li
-                class="nav-item {{ 'active' if request.path == url_for('home.index') }}"
-              >
-                <a class="nav-link" href="{{ url_for('home.index') }}"
-                  >Home
-                  <span class="sr-only">(current)</span>
-                </a>
+              <li class="nav-item {{ 'active' if request.path == url_for('home.index') }}">
+                <a class="nav-link" href="{{ url_for('home.index') }}">Home</a>
               </li>
               <li class="nav-item {{ 'active' if request.path == url_for('about.index') }}">
                 <a class="nav-link" href="{{ url_for('about.index') }}">About Us</a>
@@ -132,11 +133,13 @@ https://templatemo.com/tm-551-stand-blog
         {% endfor %}
       {% endif %}
     {% endwith %}
-    {% block content %}
-    <div style="height: 100vh;"></div>
-    {% endblock %}
+    <div class="mb-5">
+      {% block content %}
+      <div style="height: 100vh;"></div>
+      {% endblock %}
+    </div>
 
-    <footer>
+    <footer class="mt-auto">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -164,7 +167,10 @@ https://templatemo.com/tm-551-stand-blog
 
     <!-- Bootstrap core JavaScript -->
     <script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
-    <script src="{{url_for('static', filename='js/bootstrap.bundle.min.js')}}"></script>
+    <!-- <script src="{{url_for('static', filename='js/bootstrap.bundle.min.js')}}"></script> -->
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- Additional Scripts -->
     <script src="{{url_for('static', filename='js/custom.js')}}"></script>
