--- a/blog/app/templates/login.html
+++ b/blog/app/templates/login.html
@@ -14,7 +14,7 @@
                                     
                                     {% if form.email.errors %}
                                         {{ form.email(class="form-control-lg is-invalid") }}
-                                        <div class="invalid-feedback">
+                                        <div class="text-danger">
                                             {% for error in  form.email.errors %}
                                             <span>{{error}}</span>
                                             {% endfor %}
@@ -28,7 +28,7 @@
                                     
                                     {% if form.password.errors %}
                                         {{ form.password(class="form-control-lg is-invalid") }}
-                                        <div class="invalid-feedback">
+                                        <div class="text-danger">
                                             {% for error in  form.password.errors %}
                                             <span>{{error}}</span>
                                             {% endfor %}
