--- a/blog/app/templates/base.html
+++ b/blog/app/templates/base.html
@@ -103,8 +103,8 @@ https://templatemo.com/tm-551-stand-blog
 
               <!-- login logic coming soon -->
               {% if current_user.is_authenticated %}
-                <li class="nav-item {{ 'active' if request.path == url_for('auth.profile') }}">
-                  <a class="nav-link" href="{{ url_for('auth.profile') }}">{{ current_user.username }}</a>
+                <li class="nav-item {{ 'active' if request.path == url_for('profile.index') }}">
+                  <a class="nav-link" href="{{ url_for('profile.index') }}">{{ current_user.username }}</a>
                 </li>
                 <li class="nav-item main-button">
                   <a href="{{ url_for('auth.logout') }}">Logout</a>
