--- a/blog/app/templates/login.html
+++ b/blog/app/templates/login.html
@@ -13,28 +13,28 @@
                                     {{ form.email.label(class="form-control-label") }}
                                     
                                     {% if form.email.errors %}
-                                        {{ form.email(class="form-control-lg is-invalid") }}
+                                        {{ form.email(class="form-control is-invalid") }}
                                         <div class="text-danger">
                                             {% for error in  form.email.errors %}
                                             <span>{{error}}</span>
                                             {% endfor %}
                                         </div>
                                     {% else %}
-                                         {{ form.email(class="form-control-lg") }}
+                                         {{ form.email(class="form-control") }}
                                     {% endif %}
                                 </div>
                                 <div class="form-group">
                                     {{ form.password.label(class="form-control-label") }}
                                     
                                     {% if form.password.errors %}
-                                        {{ form.password(class="form-control-lg is-invalid") }}
+                                        {{ form.password(class="form-control is-invalid") }}
                                         <div class="text-danger">
                                             {% for error in  form.password.errors %}
                                             <span>{{error}}</span>
                                             {% endfor %}
                                         </div>
                                     {% else %}
-                                         {{ form.password(class="form-control-lg") }}
+                                         {{ form.password(class="form-control") }}
                                     {% endif %}
                                 </div>
                                 <div class="form-check">
