--- a/blog/app/templates/register.html
+++ b/blog/app/templates/register.html
@@ -13,14 +13,14 @@
                                     {{ form.username.label(class="form-control-label") }}
                                     
                                     {% if form.username.errors %}
-                                        {{ form.username(class="form-control-lg is-invalid") }}
+                                        {{ form.username(class="form-control is-invalid") }}
                                         <div class="text-danger">
                                             {% for error in  form.username.errors %}
                                             <span>{{error}}</span>
                                             {% endfor %}
                                         </div>
                                     {% else %}
-                                         {{ form.username(class="form-control-lg") }}
+                                         {{ form.username(class="form-control") }}
                                     {% endif %}
 
                                 </div>
@@ -28,42 +28,42 @@
                                     {{ form.email.label(class="form-control-label") }}
                                     
                                     {% if form.email.errors %}
-                                        {{ form.email(class="form-control-lg is-invalid") }}
+                                        {{ form.email(class="form-control is-invalid") }}
                                         <div class="text-danger">
                                             {% for error in  form.email.errors %}
                                             <span>{{error}}</span>
                                             {% endfor %}
                                         </div>
                                     {% else %}
-                                         {{ form.email(class="form-control-lg") }}
+                                         {{ form.email(class="form-control") }}
                                     {% endif %}
                                 </div>
                                 <div class="form-group">
                                     {{ form.password.label(class="form-control-label") }}
                                     
                                     {% if form.password.errors %}
-                                        {{ form.password(class="form-control-lg is-invalid") }}
+                                        {{ form.password(class="form-control is-invalid") }}
                                         <div class="text-danger">
                                             {% for error in  form.password.errors %}
                                             <span>{{error}}</span>
                                             {% endfor %}
                                         </div>
                                     {% else %}
-                                         {{ form.password(class="form-control-lg") }}
+                                         {{ form.password(class="form-control") }}
                                     {% endif %}
                                 </div>
                                 <div class="form-group">
                                     {{ form.confirm_password.label(class="form-control-label") }}
                                     
                                     {% if form.confirm_password.errors %}
-                                        {{ form.confirm_password(class="form-control-lg is-invalid") }}
+                                        {{ form.confirm_password(class="form-control is-invalid") }}
                                         <div class="text-danger">
                                             {% for error in  form.confirm_password.errors %}
                                             <span>{{error}}</span>
                                             {% endfor %}
                                         </div>
                                     {% else %}
-                                         {{ form.confirm_password(class="form-control-lg") }}
+                                         {{ form.confirm_password(class="form-control") }}
                                     {% endif %}
                                 </div>
                             </fieldset>
