--- a/blog/app/static/css/templatemo-stand-blog.css
+++ b/blog/app/static/css/templatemo-stand-blog.css
@@ -57,11 +57,20 @@ input.main-button {
 }
 
 .avatar {
-	vertical-align: middle;
-	width: 100px;
-	height: auto;
-	min-width: 50px;
+	border-radius: 50%;
+	margin-top: 0;
+	margin-bottom: 20px;
+	height: 150px;
+	width: 150px;
+	overflow: hidden;
   }
+.avatar img {
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+	display: block;
+  }
+
 .form-group {
     margin-bottom: 1rem;
     display: flex;
