--- a/blog/app/templates/base.html
+++ b/blog/app/templates/base.html
@@ -102,6 +102,14 @@ https://templatemo.com/tm-551-stand-blog
               </li>
 
               <!-- login logic coming soon -->
+              {% if current_user.role == "admin" %}
+                <li class="nav-item"> {# {{ 'active' if request.path == url_for('profile.index') }} #}
+                  <a class="nav-link" href="#">Create Post</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Dashboard</a>
+                </li>
+              {% endif %}
               {% if current_user.is_authenticated %}
                 <li class="nav-item {{ 'active' if request.path == url_for('profile.index') }}">
                   <a class="nav-link" href="{{ url_for('profile.index') }}">{{ current_user.username }}</a>
