--- a/blog/app/templates/profile.html
+++ b/blog/app/templates/profile.html
@@ -7,8 +7,9 @@
         <div class="row justify-content-center">
             <div class="col-md-3 border-end">
                 <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-                    
-                    <img class="rounded-circle mt-5" width="150px" src="{{ current_user.avatar }}">
+                    <div class="avatar mt-5">
+                        <img class="" width="150px" src="{{ current_user.avatar }}">
+                    </div>
                     
                     <h3 class="mt-2">{{ current_user.username }}</h3>
                     <p class="mt-1">{{ current_user.email }}</p>
