ability to insert post to database

--- a/blog/app/templates/profile.html
+++ b/blog/app/templates/profile.html
@@ -8,7 +8,7 @@
             <div class="col-md-3 border-end">
                 <div class="d-flex flex-column align-items-center text-center p-3 py-5">
                     <div class="avatar mt-5">
-                        <img class="" width="150px" src="{{ current_user.avatar }}">
+                        <img width="150px" src="{{ current_user.avatar }}" alt="user avatar" >
                     </div>
                     
                     <h3 class="mt-2">{{ current_user.username }}</h3>
