--- a/blog/app/templates/base.html
+++ b/blog/app/templates/base.html
@@ -104,7 +104,7 @@ https://templatemo.com/tm-551-stand-blog
               <!-- login logic coming soon -->
               {% if current_user.role == "admin" %}
                 <li class="nav-item"> {# {{ 'active' if request.path == url_for('profile.index') }} #}
-                  <a class="nav-link" href="#">Create Post</a>
+                  <a class="nav-link {{ 'active' if request.path == url_for('post.create_post') }}" href="{{url_for('post.create_post')}}">Create Post</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Dashboard</a>
