--- a/blog/app/static/css/templatemo-stand-blog.css
+++ b/blog/app/static/css/templatemo-stand-blog.css
@@ -35,7 +35,7 @@ h1,h2,h3,h4,h5,h6 {
 
 .main-button a {
 	display: inline-block;
-	background-color: #f48840;
+	background-color: #3b5998;
 	color: #fff;
 	font-size: 13px;
 	font-weight: 500;
@@ -44,10 +44,56 @@ h1,h2,h3,h4,h5,h6 {
 	text-transform: uppercase;
 	transition: all .3s;
 }
+.plus-button{
+	display: inline-block;
+	background-color: #3b9889;
+	color: #fff;
+	font-size: 13px;
+	font-weight: 500;
+	width: 50px;
+	height: 50px;
+	padding: 5px 5px;
+	text-transform: uppercase;
+	transition: all .3s;
+}
+.plus-button:hover {
+	background-color: #54b1a2;
+}
+.edit-button{
+	display: inline-block;
+	background-color: #3b5998;
+	color: #fff;
+	font-size: 13px;
+	font-weight: 500;
+	width: 50px;
+	height: 50px;
+	padding: 5px 5px;
+	text-transform: uppercase;
+	transition: all .3s;
+}
+.edit-button:hover {
+	background-color: #4e69a2;
+}
+.delete-button{
+	display: inline-block;
+	background-color: #c33131;
+	color: #fff;
+	font-size: 13px;
+	font-weight: 500;
+	width: 50px;
+	height: 50px;
+	padding: 5px 5px;
+	text-transform: uppercase;
+	transition: all .3s;
+}
+.delete-button:hover {
+	background-color: #ca3e3e;
+}
+
 input.main-button {
 	display: inline-block;
 	border: none;
-	background-color: #f48840;
+	background-color: #3b5998;
 	color: #fff;
 	font-size: 13px;
 	font-weight: 500;
@@ -78,7 +124,7 @@ input.main-button {
 }
 
 .main-button a:hover {
-	background-color: #fb9857;
+	background-color: #4e69a2;
 }
 
 .heading-page {
@@ -96,7 +142,7 @@ input.main-button {
 }
 
 .page-heading .text-content h4 {
-	color: #f48840;
+	color: #3b5998;
 	font-size: 18px;
 	text-transform: uppercase;
 	font-weight: 900;
@@ -119,7 +165,7 @@ input.main-button {
 /* end preloader */
 #preloader {
   overflow: hidden;
-  background: #f48840;
+  background: #3b5998;
   left: 0;
   right: 0;
   top: 0;
@@ -232,7 +278,7 @@ header .navbar {
 .background-header .navbar-nav .nav-link.active,
 .background-header .navbar-nav .nav-link.show,
 .background-header .navbar-nav .show>.nav-link {
-	color: #f48840!important;
+	color: #3b5998!important;
 }
 .navbar .navbar-brand {
 	float: 	left;
@@ -252,7 +298,7 @@ header .navbar {
 .navbar .navbar-brand h2 em {
 	font-size: 44px;
 	font-style: normal;
-	color: #f48840;
+	color: #3b5998;
 }
 #navbarResponsive {
 	z-index: 999;
@@ -277,14 +323,14 @@ header .navbar {
 .navbar .navbar-nav .nav-link.active,
 .navbar .navbar-nav .nav-link.show,
 .navbar .navbar-nav .show>.nav-link {
-	color: #f48840;
+	color: #3b5998;
 }
 .navbar .navbar-toggler-icon {
 	background-image: none;
 }
 .navbar .navbar-toggler {
 	border-color: #fff;
-	background-color: #f48840;	
+	background-color: #3b5998;	
 	height: 46px;
 	outline: none;
 	border-radius: 0px;
@@ -322,7 +368,7 @@ header .navbar {
 }
 
 .owl-banner .item .item-content .meta-category span {
-	color: #f48840;
+	color: #3b5998;
 	font-size: 18px;
 	text-transform: uppercase;
 	font-weight: 900;
@@ -361,7 +407,7 @@ header .navbar {
 }
 
 .owl-banner .item .item-content ul li a:hover {
-	color: #f48840;
+	color: #3b5998;
 }
 
 .owl-banner .owl-nav {
@@ -411,7 +457,7 @@ header .navbar {
 }
 
 .call-to-action .main-content span {
-	color: #f48840;
+	color: #3b5998;
 	font-size: 18px;
 	font-weight: 900;
 	letter-spacing: 0.5px;
@@ -445,6 +491,8 @@ header .navbar {
 
 .blog-posts .blog-thumb img {
 	width: 100%;
+	height: 340px;
+	object-fit: cover;
 	overflow: hidden;
 }
 
@@ -460,7 +508,7 @@ header .navbar {
 	text-transform: uppercase;
 	letter-spacing: 0.5px;
 	font-weight: 900;
-	color: #f48840;
+	color: #3b5998;
 }
 
 .blog-posts .down-content h4 {
@@ -508,7 +556,7 @@ header .navbar {
 }
 
 .blog-posts .down-content ul.post-info li a:hover {
-	color: #f48840;
+	color: #3b5998;
 }
 
 .blog-posts .down-content p {
@@ -529,7 +577,7 @@ header .navbar {
 
 .blog-posts .down-content ul.post-tags li:first-child i,
 .blog-posts .down-content ul.post-share li:first-child i {
-	color: #f48840;
+	color: #3b5998;
 	margin-right: 5px;
 }
 
@@ -548,7 +596,7 @@ header .navbar {
 
 .blog-posts .down-content ul.post-tags li a:hover,
 .blog-posts .down-content ul.post-share li a:hover {
-	color: #f48840;
+	color: #3b5998;
 }
 
 .blog-posts .main-button a {
@@ -582,13 +630,13 @@ ul.page-numbers li a {
 }
 
 ul.page-numbers li.active a {
-	background-color: #f48840;
-	border-color: #f48840;
+	background-color: #3b5998;
+	border-color: #3b5998;
 	color: #fff;
 }
 
 ul.page-numbers li a:hover {
-	color: #f48840;
+	color: #3b5998;
 }
 
 .blog-posts .sidebar-heading h2 {
@@ -693,7 +741,7 @@ ul.page-numbers li a:hover {
 
 .blog-posts .submit-comment button {
 	display: inline-block;
-	background-color: #f48840;
+	background-color: #3b5998;
 	color: #fff;
 	font-size: 13px;
 	font-weight: 500;
@@ -705,7 +753,7 @@ ul.page-numbers li a:hover {
 }
 
 .blog-posts .submit-comment button:hover {
-	background-color: #fb9857;
+	background-color: #4e69a2;
 }
 
 /* Sidebar */
@@ -770,7 +818,7 @@ ul.page-numbers li a:hover {
 }
 
 .sidebar .recent-posts ul li h5:hover {
-	color: #f48840;
+	color: #3b5998;
 }
 
 .sidebar .recent-posts ul li span {
@@ -796,7 +844,7 @@ ul.page-numbers li a:hover {
 }
 
 .sidebar .categories ul li a:hover {
-	color: #f48840;
+	color: #3b5998;
 }
 
 .sidebar .tags ul li {
@@ -819,8 +867,8 @@ ul.page-numbers li a:hover {
 }
 
 .sidebar .tags ul li a:hover {
-	background-color: #f48840;
-	border-color: #f48840;
+	background-color: #3b5998;
+	border-color: #3b5998;
 	color: #fff;
 }
 
@@ -869,7 +917,7 @@ footer ul.social-icons li a {
 }
 
 footer ul.social-icons li a:hover {
-	color: #f48840;
+	color: #3b5998;
 }
 
 footer p {
@@ -879,11 +927,11 @@ footer p {
 }
 
 footer p a {
-	color: #f48840;
+	color: #3b5998;
 }
 
 footer p a:hover {
-	color: #f48840;
+	color: #3b5998;
 }
 
 
@@ -942,7 +990,7 @@ footer p a:hover {
 
 .contact-us .contact-form button {
 	display: inline-block;
-	background-color: #f48840;
+	background-color: #3b5998;
 	color: #fff;
 	font-size: 13px;
 	font-weight: 500;
@@ -954,7 +1002,7 @@ footer p a:hover {
 }
 
 .contact-us .contact-form button:hover {
-	background-color: #fb9857;
+	background-color: #4e69a2;
 }
 
 .contact-us .contact-information {
@@ -1024,7 +1072,7 @@ footer p a:hover {
 }
 
 .about-us ul li a:hover {
-	background-color: #f48840;
+	background-color: #3b5998;
 }
 
 
@@ -1093,7 +1141,7 @@ footer p a:hover {
 	.navbar .navbar-nav .nav-link.active,
 	.navbar .navbar-nav .nav-link.show,
 	.navbar .navbar-nav .show>.nav-link {
-		color: #f48840!important;
+		color: #3b5998!important;
 		border-bottom: none!important;
 		padding-bottom: 15px;
 	}
