--- a/blog/app/templates/base.html
+++ b/blog/app/templates/base.html
@@ -9,18 +9,18 @@
     <meta name="description" content="" />
     <meta name="author" content="TemplateMo" />
 
-    <link rel="shortcut icon" href="{{ url_for('static', filename='/favicon.ico') }}">
+    <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename='/favicon.ico') }}"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"
       rel="stylesheet"
     />
 
     <title>
-      {% if title %}
-      {{title}} - Bruh Blog by Grace.
-      {% else %}
-      Bruh Blog by Grace.
-      {% endif %}
+      {% if title %} {{title}} - Bruh Blog by Grace. {% else %} Bruh Blog by
+      Grace. {% endif %}
     </title>
 
     <!-- Bootstrap core CSS -->
@@ -31,10 +31,15 @@
 
     <!-- Bootstrap CSS -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-    
+
     <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+
     <!-- Additional CSS Files -->
     <link
       rel="stylesheet"
@@ -48,8 +53,7 @@
       rel="stylesheet"
       href="{{url_for('static', filename='css/owl.css')}}"
     />
-    {% block head_content %}
-    {% endblock %}
+    {% block head_content %} {% endblock %}
     <!--
 
 TemplateMo 551 Stand Blog
@@ -85,45 +89,68 @@ https://templatemo.com/tm-551-stand-blog
           <a class="navbar-brand" href="{{ url_for('home.index') }}">
             <h2>Bruh Blog<em>.</em></h2>
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarResponsive"
+            aria-controls="navbarResponsive"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarResponsive">
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarResponsive"
+          >
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item {{ 'active' if request.path == url_for('home.index') }}">
+              <li
+                class="nav-item {{ 'active' if request.path == url_for('home.index') }}"
+              >
                 <a class="nav-link" href="{{ url_for('home.index') }}">Home</a>
               </li>
-              <li class="nav-item {{ 'active' if request.path == url_for('about.index') }}">
+              {#<!--} <li class="nav-item {{ 'active' if request.path == url_for('about.index') }}">
                 <a class="nav-link" href="{{ url_for('about.index') }}">About Us</a>
               </li>
               </li>
               <li class="nav-item {{ 'active' if request.path == url_for('contact.index') }}">
                 <a class="nav-link" href="{{ url_for('contact.index') }}">Contact Us</a>
-              </li>
+              </li> -->
 
-              <!-- login logic coming soon -->
-              {% if current_user.role == "admin" %}
-                <li class="nav-item"> {# {{ 'active' if request.path == url_for('profile.index') }} #}
-                  <a class="nav-link {{ 'active' if request.path == url_for('post.create_post') }}" href="{{url_for('post.create_post')}}">Create Post</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Dashboard</a>
-                </li>
-              {% endif %}
-              {% if current_user.is_authenticated %}
-                <li class="nav-item {{ 'active' if request.path == url_for('profile.index') }}">
-                  <a class="nav-link" href="{{ url_for('profile.index') }}">{{ current_user.username }}</a>
-                </li>
-                <li class="nav-item main-button">
-                  <a href="{{ url_for('auth.logout') }}">Logout</a>
-                </li>
+              <!-- login logic coming soon -->#} {% if current_user.role ==
+              "admin" %}
+              <li class="nav-item">
+                {# {{ 'active' if request.path == url_for('profile.index') }} #}
+                <a
+                  class="nav-link {{ 'active' if request.path == url_for('post.create_post') }}"
+                  href="{{url_for('post.create_post')}}"
+                  >Create Post</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{url_for('dashboard.index')}}"
+                  >Dashboard</a
+                >
+              </li>
+              {% endif %} {% if current_user.is_authenticated %}
+              <li
+                class="nav-item {{ 'active' if request.path == url_for('profile.index') }}"
+              >
+                <a class="nav-link" href="{{ url_for('profile.index') }}"
+                  >{{ current_user.username }}</a
+                >
+              </li>
+              <li class="nav-item main-button">
+                <a href="{{ url_for('auth.logout') }}">Logout</a>
+              </li>
               {% else %}
-                <li class="nav-item main-button">
-                  <a href="{{ url_for('auth.login') }}">Login</a>
-                </li>
-                <li class="nav-item main-button">
-                  <a href="{{ url_for('auth.register') }}">Register</a>
-                </li>
+              <li class="nav-item main-button">
+                <a href="{{ url_for('auth.login') }}">Login</a>
+              </li>
+              <li class="nav-item main-button">
+                <a href="{{ url_for('auth.register') }}">Register</a>
+              </li>
               {% endif%}
             </ul>
           </div>
@@ -132,18 +159,13 @@ https://templatemo.com/tm-551-stand-blog
     </header>
 
     <!-- Page Content -->
-    {% with messages = get_flashed_messages(with_categories=true) %}
-      {% if messages %}
-        {% for category, message in messages%}
-          <div class="alert alert-{{ category }}">
-            {{message}}
-          </div>
-        {% endfor %}
-      {% endif %}
-    {% endwith %}
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+    messages %} {% for category, message in messages%}
+    <div class="alert alert-{{ category }}">{{message}}</div>
+    {% endfor %} {% endif %} {% endwith %}
     <div class="mb-5">
       {% block content %}
-      <div style="height: 100vh;"></div>
+      <div style="height: 100vh"></div>
       {% endblock %}
     </div>
 
@@ -177,8 +199,16 @@ https://templatemo.com/tm-551-stand-blog
     <script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
     <!-- <script src="{{url_for('static', filename='js/bootstrap.bundle.min.js')}}"></script> -->
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Additional Scripts -->
     <script src="{{url_for('static', filename='js/custom.js')}}"></script>
@@ -200,9 +230,9 @@ https://templatemo.com/tm-551-stand-blog
       }
     </script>
     <script>
-      const year = document.querySelector('#year');
+      const year = document.querySelector("#year");
       if (year) {
-          year.innerHTML = new Date().getFullYear().toString();
+        year.innerHTML = new Date().getFullYear().toString();
       }
     </script>
   </body>
