--- a/blog/app/templates/home.html
+++ b/blog/app/templates/home.html
@@ -4,6 +4,24 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8">
+        {% if dashboard %}
+        <div class="row d-flex justify-content-between mb-2">
+          <div class="col-sm-4">
+            <h1>Dashboard</h1>
+            <span>All active and inactive post</span>
+            <div class="mb-4"></div>
+          </div>
+          <div class="col-sm-3 d-flex justify-content-end">
+            <a href="{{url_for('post.create_post')}}">
+              <div
+                class="plus-button d-flex align-items-center justify-content-center"
+              >
+                <i class="fa fa-plus"></i>
+              </div>
+            </a>
+          </div>
+        </div>
+        {% endif %}
         <!-- Banner Ends Here -->
         <div class="all-blog-posts">
           <div class="row">
@@ -11,7 +29,7 @@
             <div class="col-lg-12">
               <div class="blog-post">
                 <div class="blog-thumb">
-                  <a href="">
+                  <a href="{{url_for('post.post_detail', slug=post['slug'])}}">
                     <img
                       src="{{ post['thumbnail'] }}"
                       alt="{{ post['thumbnail_alt'] }}"
@@ -19,27 +37,67 @@
                   </a>
                 </div>
                 <div class="down-content">
-                  <a href="">
-                    <span>{{ post['category'] }}</span>
-                  </a>
-                  <a href="post-details.html"><h4>{{ post['title'] }}</h4></a>
-                  <ul class="post-info">
-                    <li><a href="#">{{ post['author']['username'] }}</a></li>
-                    <li>
-                      <a href="#"
-                        >{{ post['last_modified'].strftime('%d %B, %Y') }}</a
+                  <div class="row d-flex">
+                    <div class="col mb-3">
+                      <a href="">
+                        <span>{{ post['category'] }}</span>
+                      </a>
+                      <a
+                        href="{{url_for('post.post_detail', slug=post['slug'])}}"
+                        ><h4 class="my-0">{{ post['title'] }}</h4></a
                       >
-                    </li>
-                    <!-- <li><a href="#">{{ post['comment'] }} Comments</a></li> -->
-                  </ul>
-                  <p>{{ post['content'] }}</p>
+                      {% if not post['is_active'] %}
+                      <small>This post is inactive</small>
+                      {%endif%}
+                      <ul class="post-info">
+                        <li>
+                          <a href="#">{{ post['author']['username'] }}</a>
+                        </li>
+                        <li>
+                          <a href="#"
+                            >{{ post['last_modified'].strftime('%d %B, %Y')
+                            }}</a
+                          >
+                        </li>
+                        <!-- <li><a href="#">{{ post['comment'] }} Comments</a></li> -->
+                      </ul>
+                    </div>
+                    {% if post['author']['username'] == current_user.username %}
+
+                    <div class="col-sm-2 d-flex">
+                      <a
+                        href="{{url_for('post.update_post', slug=post['slug'])}}"
+                      >
+                        <div
+                          class="edit-button d-flex align-items-center justify-content-center"
+                        >
+                          <i class="fa fa-edit"></i>
+                        </div>
+                      </a>
+                      <a
+                        href="{{url_for('post.delete_post', slug=post['slug'])}}"
+                      >
+                        <div
+                          class="delete-button d-flex align-items-center justify-content-center"
+                        >
+                          <i class="fa fa-trash"></i>
+                        </div>
+                      </a>
+                    </div>
+                    {%endif%}
+                  </div>
+
+                  <p>{{ post['content']|truncate(500, True) }}</p>
                   <div class="post-options">
                     <div class="row">
                       <div class="col-6">
                         <ul class="post-tags">
                           <li><i class="fa fa-tags"></i></li>
                           {% for tag in post['tags'] %}
-                          <li><a href="#">{{ tag.title() }}</a></li>
+                          <li>
+                            <a href="#">{{ tag.title() }}</a>{% if not loop.last
+                            %}, {% endif %}
+                          </li>
                           {% endfor%}
                         </ul>
                       </div>
@@ -91,8 +149,10 @@
                   <ul>
                     {% for post in recent_post %}
                     <li>
-                      <a href="#">
-                        <h5>{{ post['title'] }}</h5>
+                      <a
+                        href="{{url_for('post.post_detail', slug=post['slug'])}}"
+                      >
+                        <h5>{{ post['title'].title() }}</h5>
                         <span
                           >{{ post['created_at'].strftime('%d %B, %Y') }}</span
                         >
@@ -111,7 +171,7 @@
                 <div class="content">
                   <ul>
                     {% for category in categories %}
-                    <li><a href="#">- {{category}}</a></li>
+                    <li><a href="#">- {{category.title()}}</a></li>
                     {% endfor %}
                   </ul>
                 </div>
