--- a/blog/app/templates/form_post.html
+++ b/blog/app/templates/form_post.html
@@ -1,4 +1,10 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+{% block head_content %}
+  {{ ckeditor.load() }}
+  {{ ckeditor.config(name='content') }}
+{% endblock %}
+
+{% block content %}
 <section class="register-form">
   <div class="container">
     <div class="row d-flex justify-content-center">
